src/test/resources/testinput/parsable/symtab/invalid_coco/prepost8.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl prepost8 {
  context new Auction(Policy p)
  pre : p != null;
  post : policy == p && status == INITIAL && messages.isEmpty;
}
